--- a/src/features/Auth/SignUp.module.css
+++ b/src/features/Auth/SignUp.module.css
@@ -132,7 +132,18 @@
 .infoText {
   font-size: 12px;
   color: #5f5f5f;
+  margin-top: 4px;
+  text-align: left;
 }
+
+.errorText {
+  font-size: 12px;
+  color: #e53935;
+  margin-top: 4px;
+  text-align: left;
+  font-weight: 500;
+}
+
 
 .bottomBtn {
   width: 100%;
